<resources>
    <string name="app_name">Android SQL</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Login</string>
    <string name="enter_username">Enter username here</string>
    <string name="enter_password">Enter password here</string>
    <string name="title_activity_register">Register</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter your name here</string>
    <string name="age">Age</string>
    <string name="enter_age">Enter your age here</string>
    <string name="logout">Logout</string>
    <string name="new_user">New User?</string>
    <string name="title_activity_event_list">EventListActivity</string>
    <string name="view_events">View All Events</string>
</resources>
